# quiniela-v2

./: .env.example  CLAUDE.md  LICENSE  README.md  conftest.py  manage.py  nixpacks.toml  pyproject.toml  railway.toml  start.sh
apps/core/: views.py
apps/leaderboard/: race.py  scoring.py  tasks.py  urls.py  views.py
apps/pools/: admin.py  apps.py  models.py
apps/predictions/: forms.py  urls.py  views.py
apps/tournaments/: admin.py  apps.py  models.py  services.py  signals.py  standings.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
data/: knockout_bracket.json  knockout_bracket_v2.json  players.json  r32_bracket.json  r32_bracket_confirmado.json  wc2026.json
quiniela/: asgi.py  celery.py  urls.py  wsgi.py
quiniela/settings/: base.py  local.py  production.py
templates/: base.html
templates/leaderboard/: distribution.html  leaderboard.html  my_predictions.html  participant_picks_locked.html  participants.html  pool_day.html  race.html  scoring_guide.html
templates/partials/: faq_modal.html  howto_modal.html  nav.html  score_picker.html
templates/predictions/: group_stage.html  knockout.html  picks.html  submission_confirm.html  third_place_tiebreaker.html
templates/users/: dashboard.html  login.html  password_recovery.html  register.html  (+1 more)
tests/: test_admin.py  test_auth.py  test_health.py  test_knockout_predictions.py  test_leaderboard_views.py  test_models.py  test_prediction_views.py  test_race_view.py  test_scoring.py  test_seeding.py  test_services.py  test_standings.py  test_tasks.py  test_third_place_seeding.py
(+29 files in other folders)
