[project]
name = "quiniela-v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "gunicorn>=23.0",
    "whitenoise>=6.8",
    "dj-database-url>=2.3",
    "redis>=5.2",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "django-stubs>=5.1",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.django-stubs]
django_settings_module = "quiniela.settings.local"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "quiniela.settings.local"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
